[gd_scene load_steps=14 format=3 uid="uid://cr2dxovd2dlpo"]

[ext_resource type="Texture2D" uid="uid://ch1x0t26lkjla" path="res://res/img/n.png" id="1_qv8sd"]
[ext_resource type="Script" path="res://res/scripts/play_menu.gd" id="1_sctfa"]
[ext_resource type="Texture2D" uid="uid://cqmqyg0w4eqkx" path="res://res/img/c.png" id="2_05xwk"]
[ext_resource type="Texture2D" uid="uid://08cimqe2tvwp" path="res://res/img/h.png" id="3_dfslg"]
[ext_resource type="FontFile" uid="uid://cdrib51afqpq" path="res://res/fonts/ConcertOne-Regular.ttf" id="4_rye6t"]
[ext_resource type="Texture2D" uid="uid://6iia3j8v0gfd" path="res://res/img/car.png" id="6_3kq7p"]
[ext_resource type="Texture2D" uid="uid://cwj32itldxn06" path="res://res/img/Rn.png" id="6_vvaar"]
[ext_resource type="Texture2D" uid="uid://xxda0jvmixtn" path="res://res/img/Rc.png" id="7_wn4kk"]
[ext_resource type="Texture2D" uid="uid://td64g0j4d4q8" path="res://res/img/Rh.png" id="8_ugoyd"]

[sub_resource type="LabelSettings" id="LabelSettings_0eewk"]
font = ExtResource("4_rye6t")
font_size = 110
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_65ko0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/button_2d:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HBoxContainer/button_3d:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HBoxContainer/Exit:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HBoxContainer/button_2d:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HBoxContainer/button_3d:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HBoxContainer/Exit:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ColorRect2:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.462745)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("HBoxContainer/button_2dCar:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("HBoxContainer/button_2dCar:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_44na6"]
resource_name = "intro"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333334, 1.23333),
"transitions": PackedFloat32Array(0.116629, 1),
"update": 0,
"values": [1.0, 0.6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/button_2d:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.13333, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HBoxContainer/button_3d:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.13333, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HBoxContainer/Exit:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.13333, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HBoxContainer/button_2d:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.233333, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HBoxContainer/button_3d:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.4, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HBoxContainer/Exit:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.8, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ColorRect2:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.0333334, 1.2, 1.23333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.462745), Color(0, 0, 0, 0.462745)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("HBoxContainer/button_2dCar:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1.13333, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("HBoxContainer/button_2dCar:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.6, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vefoa"]
_data = {
"RESET": SubResource("Animation_65ko0"),
"intro": SubResource("Animation_44na6")
}

[node name="PlayMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sctfa")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.462745)

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.505882)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.199982
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.92
anchor_right = 0.5
anchor_bottom = 0.92
offset_left = -386.0
offset_top = -160.0
offset_right = 386.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_constants/separation = 95

[node name="button_2d" type="TextureButton" parent="HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
disabled = true
texture_normal = ExtResource("1_qv8sd")
texture_pressed = ExtResource("2_05xwk")
texture_hover = ExtResource("3_dfslg")

[node name="Label" type="Label" parent="HBoxContainer/button_2d"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -65.5
offset_right = 58.0
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2
text = "2D"
label_settings = SubResource("LabelSettings_0eewk")
metadata/_edit_use_anchors_ = true

[node name="button_3d" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("1_qv8sd")
texture_pressed = ExtResource("2_05xwk")
texture_hover = ExtResource("3_dfslg")

[node name="Label" type="Label" parent="HBoxContainer/button_3d"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -65.5
offset_right = 58.0
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2
text = "3D"
label_settings = SubResource("LabelSettings_0eewk")
metadata/_edit_use_anchors_ = true

[node name="button_2dCar" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("1_qv8sd")
texture_pressed = ExtResource("2_05xwk")
texture_hover = ExtResource("3_dfslg")

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/button_2dCar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.5
offset_top = -35.5
offset_right = 68.5
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_3kq7p")

[node name="Exit" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("6_vvaar")
texture_pressed = ExtResource("7_wn4kk")
texture_hover = ExtResource("8_ugoyd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vefoa")
}

[connection signal="pressed" from="HBoxContainer/button_2d" to="." method="_on_button2d_pressed"]
[connection signal="pressed" from="HBoxContainer/button_3d" to="." method="_on_button3d_pressed"]
[connection signal="pressed" from="HBoxContainer/button_2dCar" to="." method="_on_button3d_pressed"]
[connection signal="pressed" from="HBoxContainer/button_2dCar" to="." method="_on_button_2d_car_pressed"]
[connection signal="pressed" from="HBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
